# PyMcp

./: LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/sample_mcp_server/: Dockerfile  README.md  __init__.py  server.py
src/sample_mcp_server/tests/: __init__.py  test_server.py
